# games-on-raspberry-pi

./: # from __future__ import annotations.py  .env.example  .gitignore  README.md  check_pi.py  debug_pi.py  fix_dpkg_and_nvm.py  fix_npm.py  install_cloudflared_pi.py  main.py  pyproject.toml  setup_pi.py  verify_site.py
backend/app/: db.py  game.py  main.py
docs/: deploy-pi-git.md
frontend/: index.html  package-lock.json  package.json
frontend/public/aikido/: README.md  game.js  index.html  styles.css
frontend/public/dodawanie/: README.md  game.js  index.html  styles.css
frontend/public/kurka-wodna/: README.md  game.js  index.html  styles.css
frontend/src/: main.jsx  styles.css
scripts/deploy/: post-receive  setup-pi-git-remote.sh
